--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Langstone/backend-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/Langstone/backend-project-lvl3/actions)",
-  "main": "index.js",
+  "main": "page_loader.js",
   "scripts": {
     "test": "jest"
   },
