--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cheerio": "^1.0.0-rc.10",
     "commander": "^8.3.0",
     "debug": "^4.3.3",
+    "htmlparser2": "^7.2.0",
     "listr": "^0.14.3"
   }
 }
